# arcbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE.md  README.md  SECURITY.md  default.profraw  issues.net.md  plan.helper.md  plan.network.md  release-notes.md  release-please-config.json  release-plz.toml
app/arcbox/: Cargo.toml  README.md
app/arcbox-api/: CHANGELOG.md  Cargo.toml  README.md
app/arcbox-api/src/: error.rs  grpc.rs  lib.rs  migration.rs  sandbox_conv.rs  sandbox_linux.rs  system.rs
app/arcbox-api/src/grpc/: icon.rs  kubernetes.rs  machine.rs  mod.rs  sandbox.rs  snapshot.rs
app/arcbox-api/src/rest/: handlers.rs  mod.rs  sse.rs  types.rs
app/arcbox-api/src/sandbox/: dispatch.rs  mod.rs
app/arcbox-api/tests/: icon_test.rs
app/arcbox-cli/: CHANGELOG.md  Cargo.toml  README.md
app/arcbox-cli/src/: lib.rs  main.rs  rootfs_builder.rs
app/arcbox-cli/src/commands/: boot.rs  cli_plugins.rs  daemon.rs  disk.rs  docker.rs  doctor.rs  install.rs  internal.rs  kubernetes.rs  logs.rs  machine.rs  migrate.rs  mod.rs  sandbox.rs  setup.rs  symlink.rs  uninstall.rs
app/arcbox-core/: CHANGELOG.md  Cargo.toml  README.md
app/arcbox-core/examples/: hv_e2e.rs
app/arcbox-core/src/: agent_client.rs  boot_assets.rs  bridge_discovery.rs  config.rs  error.rs  event.rs  lib.rs  machine.rs  migration.rs  persistence.rs  route_reconciler.rs  runtime.rs  trace.rs  vm.rs  vm_lifecycle.rs
app/arcbox-core/src/container_backend/: guest_docker.rs
app/arcbox-core/src/vm_lifecycle/: health.rs  mod.rs  recovery.rs  serial.rs
app/arcbox-daemon/: CHANGELOG.md  Cargo.toml
app/arcbox-daemon/src/: context.rs  dns_service.rs  kubernetes_proxy.rs  main.rs  nfs_mount.rs  recovery.rs  self_setup.rs  services.rs  shutdown.rs  startup.rs
app/arcbox-daemon/src/self_setup/: cli_tools.rs  dns_resolver.rs  docker_socket.rs
app/arcbox-daemon/src/startup/: assets.rs  cleanup.rs  lock.rs  mod.rs
app/arcbox-docker/: CHANGELOG.md  Cargo.toml  README.md
app/arcbox-docker-tools/: Cargo.toml
app/arcbox-docker-tools/src/: lib.rs  lockfile.rs  manager.rs  registry.rs
app/arcbox-docker/src/: api.rs  context.rs  host_path.rs  lib.rs  proxy.rs  server.rs  types.rs
app/arcbox-docker/src/handlers/: build.rs  container.rs  image.rs  mod.rs  system.rs
app/arcbox-docker/src/proxy/: connector.rs  fallback.rs  forward.rs  mod.rs  port_bindings.rs  stream.rs  upgrade.rs  upload.rs
app/arcbox-docker/src/types/: container.rs  exec.rs  image.rs  mod.rs  network.rs  volume.rs
app/arcbox-docker/tests/: api_tests.rs  mock_guest.rs  proxy_integration.rs
app/arcbox-docker/tests/support/: mod.rs  (+1 more)
app/arcbox-helper/: Cargo.toml
app/arcbox-helper/src/: client.rs  dns.rs  lib.rs  main.rs  network.rs  route.rs  server.rs  socket.rs  validate.rs
app/arcbox-helper/tests/: connection_test.rs  dns_test.rs  route_test.rs  rpc_test.rs  socket_test.rs
app/arcbox-migration/: Cargo.toml
app/arcbox-migration/src/: docker_types.rs  error.rs  executor.rs  helper_image.rs  lib.rs  model.rs  planner.rs  progress.rs  runner.rs  source.rs
comm/arcbox-transport/: CHANGELOG.md  Cargo.toml
comm/arcbox-transport/src/: lib.rs  vsock.rs
common/arcbox-constants/: CHANGELOG.md  Cargo.toml
common/arcbox-constants/src/: cmdline.rs  devices.rs  env.rs  lib.rs  paths.rs  ports.rs  status.rs  timeouts.rs  virtiofs.rs  wire.rs
common/arcbox-dns/: Cargo.toml
common/arcbox-dns/src/: lib.rs
common/arcbox-dns/tests/: response_builders.rs
common/arcbox-error/: Cargo.toml
common/arcbox-logging/: Cargo.toml
common/arcbox-logging/src/: lib.rs  rotating.rs
common/arcbox-route/: AGENTS.md  Cargo.toml
common/arcbox-route/src/: lib.rs  msg.rs  sockaddr.rs
common/arcbox-xnu-net/: Cargo.toml
common/arcbox-xnu-net/benches/: throughput.rs
common/arcbox-xnu-net/src/: async_batch.rs  batch.rs  ffi.rs  lib.rs
crates/arcbox-asset/: Cargo.toml
crates/arcbox-asset/src/: arch.rs  download.rs  lib.rs  progress.rs
guest/arcbox-agent/: Cargo.toml  README.md  plan.md
guest/arcbox-agent/src/: agent.rs  config.rs  dns.rs  dns_server.rs  docker_events.rs  error.rs  init.rs  k3s.rs  lib.rs  machine.rs  machine_init.rs  main.rs  mount.rs  net.rs  nfs.rs  port_forward.rs  rootfs_builder.rs  rpc.rs  sandbox.rs  shutdown.rs  supervisor.rs
guest/arcbox-agent/tests/: dns_aliases.rs  sandbox_service_manager.rs
hypervisor/arcbox-vm/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
hypervisor/arcbox-vm/src/: error.rs  file_io.rs  instance.rs  lib.rs  manager.rs  network.rs  sandbox.rs  snapshot.rs  spawn.rs  vsock.rs
hypervisor/arcbox-vm/tests/: integration.rs
hypervisor/arcbox-vm/vmm-cli/: Cargo.toml
hypervisor/arcbox-vm/vmm-core/: Cargo.toml  build.rs
hypervisor/arcbox-vm/vmm-daemon/: Cargo.toml
hypervisor/arcbox-vm/vmm-grpc/: Cargo.toml  build.rs
hypervisor/arcbox-vz/: CHANGELOG.md  Cargo.toml
hypervisor/arcbox-vz/examples/: vsock_echo.rs
hypervisor/arcbox-vz/src/: delegate.rs  socket.rs  vm.rs
pro/arcbox-snapshot/: Cargo.toml
rpc/arcbox-grpc/: Cargo.toml  README.md  build.rs
rpc/arcbox-grpc/src/: lib.rs
rpc/arcbox-protocol/: Cargo.toml  README.md  build.rs
rpc/arcbox-protocol/proto/: agent.proto  api.proto  common.proto  container.proto  image.proto  kubernetes.proto  machine.proto  sandbox.proto
rpc/arcbox-protocol/src/: lib.rs
services/arcbox-container/: Cargo.toml
services/arcbox-container/src/: error.rs  exec.rs  lib.rs
services/arcbox-net/: CHANGELOG.md  Cargo.toml  README.md
services/arcbox-net/src/: dhcp.rs  dns.rs  lib.rs  mdns.rs  nat.rs  nat_backend.rs  port_forward.rs
services/arcbox-oci/: Cargo.toml
services/arcbox-oci/src/: lib.rs
tests/e2e-smoke/: Cargo.toml
tests/e2e-smoke/src/: harness.rs  lib.rs
tests/e2e-smoke/tests/: smoke.rs
virt/arcbox-fs/: Cargo.toml  README.md
virt/arcbox-fs/src/: cache.rs  dispatcher.rs  error.rs  fuse.rs  lib.rs  passthrough.rs  server.rs
virt/arcbox-hv/: Cargo.toml
virt/arcbox-hv/src/: error.rs  exit.rs  ffi.rs  gic.rs  lib.rs  memory.rs  vcpu.rs  vm.rs
(+472 files in other folders)
