[workspace]
resolver = "3"
members = [
    # ============================================
    # L0: Common (MIT OR Apache-2.0)
    # ============================================
    "common/arcbox-constants",
    "common/arcbox-error",

    # ============================================
    # L1-2: Hypervisor (MIT OR Apache-2.0)
    # ============================================
    "hypervisor/arcbox-vz",
    "hypervisor/arcbox-hypervisor",
    "hypervisor/arcbox-vmm",
    "hypervisor/arcbox-virtio",
    "hypervisor/arcbox-vm",

    # ============================================
    # L3: Services (MIT OR Apache-2.0)
    # ============================================
    "services/arcbox-fs",
    "services/arcbox-net",
    "services/arcbox-container",
    "services/arcbox-oci",

    # ============================================
    # L4: Communication (MIT OR Apache-2.0)
    # ============================================
    "comm/arcbox-protocol",
    "comm/arcbox-grpc",
    "comm/arcbox-transport",

    # ============================================
    # L5-6: Application (MIT OR Apache-2.0)
    # ============================================
    "app/arcbox-core",
    "app/arcbox-api",
    "app/arcbox-docker",
    "app/arcbox-cli",
    "app/arcbox-daemon",
    "app/arcbox",

    # ============================================
    # Guest Components (MIT OR Apache-2.0)
    # ============================================
    "guest/arcbox-agent",
]

# ============================================
# Enterprise Layer (Proprietary, separate repos)
# ============================================
# Located in arcboxd org private repositories:
#   - arcboxd/arcbox-desktop   (GPUI desktop app)
#   - arcboxd/arcbox-sso       (SSO/LDAP integration)
#   - arcboxd/arcbox-audit     (Audit logging)
#   - arcboxd/arcbox-k8s       (Kubernetes integration)

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/arcbox"
authors = ["AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# ttrpc (high-performance RPC)
ttrpc = "0.8"
ttrpc-codegen = "0.5"

# HTTP server (Docker REST API)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"

# Terminal
crossterm = "0.27"

# Bytes and buffer
bytes = "1"

# Cryptography
sha2 = "0.10"

# Concurrent data structures
dashmap = "6"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hostname
hostname = "0.4"

# Nix (Unix APIs)
nix = { version = "0.29", features = [
    "fs",
    "process",
    "socket",
    "ioctl",
    "mman",
    "term",
    "signal",
    "user",
] }

# libc
libc = "0.2"

# External crates
arcbox-boot = { version = "0.3", features = ["download"] }
macos-resolver = "0.2.0"

fc-sdk = "0.2.3"

# Internal crates (Core layer)
arcbox-constants = { version = "0.1.2", path = "common/arcbox-constants" }
arcbox-error = { version = "0.1.2", path = "common/arcbox-error" }
arcbox-vz = { version = "0.1.2", path = "hypervisor/arcbox-vz" }
arcbox-hypervisor = { version = "0.1.2", path = "hypervisor/arcbox-hypervisor" }
arcbox-vmm = { version = "0.1.2", path = "hypervisor/arcbox-vmm" }
arcbox-virtio = { version = "0.1.2", path = "hypervisor/arcbox-virtio" }
arcbox-vm = { version = "0.1.2", path = "hypervisor/arcbox-vm" }
arcbox-fs = { version = "0.1.2", path = "services/arcbox-fs" }
arcbox-net = { version = "0.1.2", path = "services/arcbox-net" }
arcbox-container = { version = "0.1.2", path = "services/arcbox-container" }
arcbox-oci = { version = "0.1.2", path = "services/arcbox-oci" }
arcbox-protocol = { version = "0.1.2", path = "comm/arcbox-protocol" }
arcbox-grpc = { version = "0.1.2", path = "comm/arcbox-grpc" }
arcbox-transport = { version = "0.1.2", path = "comm/arcbox-transport" }
arcbox-docker = { version = "0.1.2", path = "app/arcbox-docker" }
arcbox-core = { version = "0.1.2", path = "app/arcbox-core" }
arcbox-api = { version = "0.1.2", path = "app/arcbox-api" }
arcbox-cli = { version = "0.1.2", path = "app/arcbox-cli" }
arcbox-agent = { version = "0.1.2", path = "guest/arcbox-agent" }
arcbox = { version = "0.1.2", path = "app/arcbox" }

# Test infrastructure
tempfile = "3"

[workspace.lints.clippy]
# Enable pedantic and nursery at workspace level
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic lints that are project-wide noise
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
# Style preferences
uninlined_format_args = "allow"
redundant_else = "allow"
items_after_statements = "allow"
if_not_else = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
# Numeric casts — common in low-level/systems code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# Protobuf generated code
derive_partial_eq_without_eq = "allow"
# Other pedantic lints not useful for this project
similar_names = "allow"
unreadable_literal = "allow"
match_same_arms = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
unused_async = "allow"
too_many_lines = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
manual_let_else = "allow"
default_trait_access = "allow"
wildcard_imports = "allow"

[workspace.lints.rust]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies in dev mode for better performance
opt-level = 2
