[workspace]
resolver = "3"
members = [
    # ============================================
    # L0: Common (MIT OR Apache-2.0)
    # ============================================
    "common/arcbox-constants",
    "common/arcbox-error",
    "common/arcbox-dns",
    "common/arcbox-asset",

    # ============================================
    # L1-3: Virtualization (MIT OR Apache-2.0)
    # ============================================
    "virt/arcbox-vz",
    "virt/arcbox-hypervisor",
    "virt/arcbox-vmm",
    "virt/arcbox-virtio",
    "virt/arcbox-vm",
    "virt/arcbox-fs",
    "virt/arcbox-net",
    "virt/arcbox-dhcp",

    # ============================================
    # L4: RPC (MIT OR Apache-2.0)
    # ============================================
    "rpc/arcbox-protocol",
    "rpc/arcbox-grpc",
    "rpc/arcbox-transport",

    # ============================================
    # L5: Runtime (MIT OR Apache-2.0)
    # ============================================
    "runtime/arcbox-container",
    "runtime/arcbox-oci",

    # ============================================
    # L6-7: Application (MIT OR Apache-2.0)
    # ============================================
    "app/arcbox-core",
    "app/arcbox-api",
    "app/arcbox-docker",
    "app/arcbox-docker-tools",
    "app/arcbox-cli",
    "app/arcbox-daemon",
    "app/arcbox",

    # ============================================
    # Guest Components (MIT OR Apache-2.0)
    # ============================================
    "guest/arcbox-agent",
]

[workspace.package]
version = "0.2.6" # x-release-please-version
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcboxlabs/arcbox"
authors = ["ArcBox Labs <team@arcbox.dev>", "AprilNEA <dev@aprilnea.me> (https://aprilnea.me)"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error reporting
sentry = { version = "0.46", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "tracing",
    "anyhow",
    "reqwest",
    "rustls",
    "tokio",
] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# HTTP server (Docker REST API)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"

# Terminal
crossterm = "0.27"

# Bytes and buffer
bytes = "1"

# Cryptography
sha2 = "0.10"

# Concurrent data structures
dashmap = "6"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hostname
hostname = "0.4"

# Nix (Unix APIs)
nix = { version = "0.29", features = [
    "fs",
    "net",
    "process",
    "socket",
    "ioctl",
    "mman",
    "term",
    "signal",
    "user",
] }

# libc
libc = "0.2"

# macOS bridge FDB (forwarding database) access via private ioctls
ifbridge = "0.1"

# Process identity (pidpath, bsdinfo)
libproc = "0.14"

arcbox-asset = { version = "0.2.6", path = "common/arcbox-asset", features = ["download"] } # x-release-please-version
arcbox-docker-tools = { version = "0.2.6", path = "app/arcbox-docker-tools" } # x-release-please-version

# External crates
arcbox-boot = { version = "0.5.1", features = ["download"] }
macos-resolver = "0.2.0"

fc-sdk = "0.2.3"

# Internal crates
arcbox-constants = { version = "0.2.6", path = "common/arcbox-constants" } # x-release-please-version
arcbox-dns = { version = "0.2.6", path = "common/arcbox-dns" } # x-release-please-version
arcbox-error = { version = "0.2.6", path = "common/arcbox-error" } # x-release-please-version
arcbox-vz = { version = "0.2.6", path = "virt/arcbox-vz" } # x-release-please-version
arcbox-hypervisor = { version = "0.2.6", path = "virt/arcbox-hypervisor" } # x-release-please-version
arcbox-vmm = { version = "0.2.6", path = "virt/arcbox-vmm" } # x-release-please-version
arcbox-virtio = { version = "0.2.6", path = "virt/arcbox-virtio" } # x-release-please-version
arcbox-vm = { version = "0.2.6", path = "virt/arcbox-vm" } # x-release-please-version
arcbox-fs = { version = "0.2.6", path = "virt/arcbox-fs" } # x-release-please-version
arcbox-net = { version = "0.2.6", path = "virt/arcbox-net" } # x-release-please-version
arcbox-dhcp = { version = "0.2.6", path = "virt/arcbox-dhcp" } # x-release-please-version
arcbox-container = { version = "0.2.6", path = "runtime/arcbox-container" } # x-release-please-version
arcbox-protocol = { version = "0.2.6", path = "rpc/arcbox-protocol" } # x-release-please-version
arcbox-grpc = { version = "0.2.6", path = "rpc/arcbox-grpc" } # x-release-please-version
arcbox-transport = { version = "0.2.6", path = "rpc/arcbox-transport" } # x-release-please-version
arcbox-docker = { version = "0.2.6", path = "app/arcbox-docker" } # x-release-please-version
arcbox-core = { version = "0.2.6", path = "app/arcbox-core" } # x-release-please-version
arcbox-api = { version = "0.2.6", path = "app/arcbox-api" } # x-release-please-version

# Test infrastructure
tempfile = "3"

[workspace.lints.clippy]
# Enable pedantic and nursery at workspace level
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic lints that are project-wide noise
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
# Style preferences
uninlined_format_args = "allow"
redundant_else = "allow"
items_after_statements = "allow"
if_not_else = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
# Numeric casts — common in low-level/systems code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# Protobuf generated code
derive_partial_eq_without_eq = "allow"
# Other pedantic lints not useful for this project
similar_names = "allow"
unreadable_literal = "allow"
match_same_arms = "allow"
needless_pass_by_value = "allow"
unused_self = "allow"
unused_async = "allow"
too_many_lines = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
manual_let_else = "allow"
default_trait_access = "allow"
wildcard_imports = "allow"

[workspace.lints.rust]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies in dev mode for better performance
opt-level = 2
