[package]
name = "arcbox-api"
description = "API server for ArcBox (gRPC + REST)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-core = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-grpc = { workspace = true }
arcbox-docker = { workspace = true }
arcbox-error = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
libc = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []

[lints]
workspace = true
