[package]
name = "arcbox-cli"
description = "Command-line interface for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "arcbox_cli"
path = "src/lib.rs"

[[bin]]
name = "abctl"
path = "src/main.rs"

[[bin]]
name = "arcbox"
path = "src/bin/arcbox_placeholder.rs"

[dependencies]
arcbox-core = { workspace = true }
arcbox-docker = { workspace = true }
arcbox-grpc = { workspace = true }
arcbox-protocol = { workspace = true }
tonic = { workspace = true }
hyper-util = "0.1"
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
crossterm = { workspace = true }
libc.workspace = true
humantime = "2.3.0"
arcbox-docker-tools = { version = "0.1.2", path = "../../crates/arcbox-docker-tools" }
arcbox-asset = { version = "0.1.2", path = "../../crates/arcbox-asset", features = ["download"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-resolver = { workspace = true }

[features]
default = []

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }

[lints]
workspace = true
