[package]
name = "arcbox-core"
description = "Core orchestration layer for ArcBox"
version = "0.0.1-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-hypervisor = { workspace = true }
arcbox-vmm = { workspace = true }
arcbox-virtio = { workspace = true }
arcbox-fs = { workspace = true }
arcbox-net = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-transport = { workspace = true }
arcbox-constants = { workspace = true }
arcbox-error = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[features]
default = []
backend-native = []
backend-guest-docker = []
provision-bundled = []
provision-distro = []
