[package]
name = "arcbox-core"
description = "Core orchestration layer for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-hypervisor = { workspace = true }
arcbox-vmm = { workspace = true }
arcbox-virtio = { workspace = true }
arcbox-fs = { workspace = true }
arcbox-net = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-transport = { workspace = true }
arcbox-constants = { workspace = true }
arcbox-error = { workspace = true }
arcbox-boot = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
arcbox-vm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[features]
default = []
backend-native = []
backend-guest-docker = []
provision-bundled = []
provision-distro = []

[lints]
workspace = true
