[package]
name = "arcbox-core"
publish = false
description = "Core orchestration layer for ArcBox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-hypervisor = { workspace = true }
arcbox-vmm = { workspace = true }
arcbox-virtio = { workspace = true }
arcbox-fs = { workspace = true }
arcbox-net = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-transport = { workspace = true }
arcbox-constants = { workspace = true }
arcbox-error = { workspace = true }
arcbox-boot = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
arcbox-dns = { workspace = true }
arcbox-helper = { workspace = true }
arcbox-migration = { path = "../arcbox-migration" }
libc = { workspace = true }
tempfile = "3"
arcbox-port-forward = { version = "0.3.21", path = "../../virt/arcbox-port-forward" }

[target.'cfg(target_os = "macos")'.dependencies]
ifbridge = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
backend-native = []
backend-guest-docker = []
provision-bundled = []
provision-distro = []
vmnet = ["arcbox-vmm/vmnet"]
gic = ["arcbox-vmm/gic"]

[lints]
workspace = true
