[package]
name = "arcbox-docker-tools"
publish = false
description = "Docker CLI tool download, installation, and management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-asset = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
flate2 = "1"
tar = "0.4"
tempfile.workspace = true

[lints]
workspace = true

[dev-dependencies]
sha2.workspace = true
