[package]
name = "arcbox-helper"
publish = false
description = "Privileged helper for ArcBox network operations (utun, routes)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "arcbox-helper"
path = "src/main.rs"

[dependencies]
arcbox-net = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sendfd = "0.4"

[lints]
workspace = true
