[package]
name = "arcbox-helper"
publish = false
description = "Minimal setuid-capable helper for privileged host mutations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "arcbox-helper"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

[lints]
workspace = true
