[package]
name = "arcbox"
description = "High-performance container and VM runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["container", "vm", "virtualization", "docker", "runtime"]
categories = ["virtualization", "development-tools"]
publish = false

[dependencies]
arcbox-hypervisor = { workspace = true }
arcbox-virtio = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-vmm = { workspace = true }
arcbox-container = { workspace = true }
arcbox-fs = { workspace = true }
arcbox-net = { workspace = true }
arcbox-core = { workspace = true }

[features]
default = []

[lints]
workspace = true
