[package]
name = "arcbox-transport"
description = "Transport layer abstractions for ArcBox (Unix socket, vsock)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
arcbox-error = { workspace = true }
arcbox-protocol = { workspace = true }
arcbox-constants = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
