[package]
name = "arcbox-constants"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared protocol and runtime constants for ArcBox"

[features]
default = []
std = ["dep:dirs"]

[dependencies]
dirs = { workspace = true, optional = true }

[lints]
workspace = true
