[package]
name = "arcbox-dns"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DNS packet parsing and response building for ArcBox (no platform deps)"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
